컨테이너 활용한 단위테스트 실습